fix: gap on nav menu
style: font size on cart in responsive menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
   transition: all 0.5s;
 }
 
@@ -216,6 +216,10 @@ p {
 
 .button:hover {
   background-color: var(--light-blue-color);
+}
+
+.bx-cart {
+  font-size: 2.5rem;
 }
 
 /* Para pantallas de escritorio */
